ADD spacing config to text widget

--- a/resources/scss/ceres/widgets/Grid/_grid-widget.scss
+++ b/resources/scss/ceres/widgets/Grid/_grid-widget.scss
@@ -96,3 +96,12 @@
         }
     }
 }
+
+.checkout
+{
+    .widget-grid .widget-inner > div
+    {
+        background-color: $white;
+        padding: $spacer;
+    }
+}
