--- a/resources/views/Checkout/CheckoutCategory.twig
+++ b/resources/views/Checkout/CheckoutCategory.twig
@@ -14,7 +14,7 @@
 
     {% set shopBuilderTemplate = shop_builder_category_template(category.id, "checkout") %}
     {% if shopBuilderTemplate | trim is not empty %}
-        <div class="page-content checkout container-max">
+        <div class="container-max checkout">
             <div class="row">
                 <div class="col">
                     <checkout
