--- a/resources/views/Widgets/Common/TextWidget.twig
+++ b/resources/views/Widgets/Common/TextWidget.twig
@@ -1,9 +1,15 @@
 {% set text         = widget.settings.text.mobile %}
 {% set appearance   = widget.settings.appearance.mobile %}
 
+{% import "Ceres::Widgets.Helper.WidgetHelper" as WidgetHelper %}
+
+{% set hasSpacing = widget.settings.customMargin.mobile or widget.settings.customPadding.mobile %}
+{% set inlineSpacings = WidgetHelper.getInlineSpacings(widget.settings, widget.settings.customPadding.mobile, widget.settings.customMargin.mobile) %}
+{% set spacingClasses = WidgetHelper.getSpacingClasses(widget.settings, widget.settings.customPadding.mobile, widget.settings.customMargin.mobile) %}
+
 {% if text | trim is not empty %}
-<div class="widget widget-text widget-{{ appearance | default('primary') }}">
-    <div class="widget-inner">
+<div class="widget widget-text widget-{{ appearance | default('primary') }}{% if spacingClasses | length > 0 %} {{ spacingClasses }}{% endif %}"{% if inlineSpacings | length > 0 %} style="{{ inlineSpacings }}"{% endif %}>
+    <div class="widget-inner{% if hasSpacing %} m-0 p-0{% endif %}">
         {{ text | raw }}
     </div>
 </div>
