FIX separator widget

--- a/resources/views/Widgets/Common/SeparatorWidget.twig
+++ b/resources/views/Widgets/Common/SeparatorWidget.twig
@@ -1,13 +1,7 @@
 {% import "Ceres::Widgets.Helper.WidgetHelper" as WidgetHelper %}
 
-{% set inlineSpacings %}
-    {{- WidgetHelper.getInlineSpacings( widget.settings.margin, "margin" ) | trim -}}
-{% endset %}
-
-{% set spacingClasses %}
-    {{- WidgetHelper.getSpacingClasses( widget.settings.margin, "m" ) | trim -}}
-{% endset %}
-
+{% set inlineSpacings = WidgetHelper.getInlineSpacings( widget.settings, false, true ) %}
+{% set spacingClasses = WidgetHelper.getSpacingClasses( widget.settings, false, true ) %}
 
 {% if isPreview %}<div class="widget-editable-min-height">{% endif %}
     <hr{% if inlineSpacings | length > 0 %} style="{{ inlineSpacings }}"{% endif %}{% if spacingClasses | length > 0 %} class="{{ spacingClasses }}"{% endif %}>
