--- a/resources/views/MyAccount/MyAccountCategory.twig
+++ b/resources/views/MyAccount/MyAccountCategory.twig
@@ -12,10 +12,12 @@
 {% block PageBody %}
     {% set shopBuilderTemplate = shop_builder_category_template(category.id, "myaccount") %}
     {% if shopBuilderTemplate | trim is not empty %}
-        <div class="page-content myaccount container-max">
+        <div class="container-max">
             <div class="row">
                 <div class="col">
-                    {{ shopBuilderTemplate | raw }}
+                    <div class="bg-white p-3">
+                        {{ shopBuilderTemplate | raw }}
+                    </div>
                 </div>
             </div>
         </div>
