--- a/resources/views/MyAccount/Components/OrderReturnHistory.twig
+++ b/resources/views/MyAccount/Components/OrderReturnHistory.twig
@@ -1,30 +1,36 @@
 {{ component("Ceres::MyAccount.Components.OrderReturnHistoryItem") }}
 
 <script type="x/template" id="vue-order-return-history">
-	<div class="form-group">
-		<div class="row mb-3">
-            <div class="col-12 col-md-12 col-lg-12">
-				<!-- RETURN PAGINATION -->
-                <div class="clearfix history-pagination" v-if="returnsList.totalsCount > itemsPerPage">
-                    <div class="float-left counter">
-                        {{ trans("Ceres::Template.returnHistoryShow", {"countStart": "${ returnsList.firstOnPage }", "countEnd": "${ returnsList.lastOnPage }", "orderMaxCount": "${ returnsList.totalsCount }" }) }}
-                    </div>
-
-					{% include "Ceres::PageDesign.Partials.PaginationTemplate" with { 'page': 'returnsList.page', 'pageMax': 'returnsList.lastPageNumber', 'setPage': 'setPage' } %}
-
-                </div>
-                <!-- ./RETURN PAGINATION -->
-
-				<hr>
-
-				<div :class="{ 'loading': waiting }">
-					{% include "Ceres::ItemList.Partials.LoadingAnimation" %}
-				</div>
-
-				<div v-if="!waiting" class="order-list">
-					<order-return-history-item v-for="returnOrder in returnsList.entries" :returnOrder="returnOrder" :key="returnOrder.order.id"></order-return-history-item>
+	<div>
+		<div v-if="isUserLoggedIn !== false" class="form-group">
+			<div class="row mb-3">
+	            <div class="col-12 col-md-12 col-lg-12">
+					<!-- RETURN PAGINATION -->
+	                <div class="clearfix history-pagination" v-if="returnsList.totalsCount > itemsPerPage">
+	                    <div class="float-left counter">
+	                        {{ trans("Ceres::Template.returnHistoryShow", {"countStart": "${ returnsList.firstOnPage }", "countEnd": "${ returnsList.lastOnPage }", "orderMaxCount": "${ returnsList.totalsCount }" }) }}
+	                    </div>
+	
+						{% include "Ceres::PageDesign.Partials.PaginationTemplate" with { 'page': 'returnsList.page', 'pageMax': 'returnsList.lastPageNumber', 'setPage': 'setPage' } %}
+	
+	                </div>
+	                <!-- ./RETURN PAGINATION -->
+	
+					<hr>
+	
+					<div :class="{ 'loading': waiting }">
+						{% include "Ceres::ItemList.Partials.LoadingAnimation" %}
+					</div>
+	
+					<div v-if="!waiting" class="order-list">
+						<order-return-history-item v-for="returnOrder in returnsList.entries" :returnOrder="returnOrder" :key="returnOrder.order.id"></order-return-history-item>
+					</div>
 				</div>
 			</div>
+		</div>
+
+		<div v-if="isUserLoggedIn === false">
+			<slot></slot>
 		</div>
 	</div>
 </script>
