--- a/resources/views/MyAccount/Components/History.twig
+++ b/resources/views/MyAccount/Components/History.twig
@@ -18,7 +18,8 @@
 				</order-history>
 			</div>
 			 <div class="tab-pane" id="order-return-tab" role="tabpanel" aria-expanded="false" v-if="isReturnActive && contactHasReturns">
-                <order-return-history template="#vue-order-return-history"
+                <order-return-history
+					template="#vue-order-return-history"
 					:items-per-page="ordersPerPage"
 					:show-first-page="{{ config('Ceres.pagination.showFirstPage') }}"
 					:show-last-page="{{ config('Ceres.pagination.showLastPage') }}">
