--- a/resources/views/Widgets/Common/ImageCarouselWidget.twig
+++ b/resources/views/Widgets/Common/ImageCarouselWidget.twig
@@ -8,18 +8,18 @@
 
 {{ Twig.set("slides", "[]") }}
 
-{% set slideData = widget.settings.slides.mobile %}
+{% set slideData = widget.settings.slides %}
 {% if sliderParams is not empty and slideData is empty %}
     {% set slideData = sliderParams.mobile %}
 {% endif %}
 
-{% for slideSettings in slideData %}
+{% for slideSettings in slideData.mobile %}
 
     {{ Twig.set("slide", "{ headlineStyle: '#{ slideSettings.headlineStyle }' }") }}
 
     {% set pushCurrentSlide = false %}
 
-    {% if slideSettings.categoryId | trim is not empty %}
+    {% if slideSettings.url.type == 'category' %}
 
         {{ Twig.set("category", Twig.call("services.category.get", [slideSettings.categoryId])) }}
         {{ Twig.set("categoryUrl", Twig.call("services.category.getURL", ["$category"]) ) }}
@@ -30,7 +30,7 @@
 
         {% set pushCurrentSlide = true %}
 
-    {% elseif slideSettings.variationId | trim is not empty %}
+    {% elseif slideSettings.url.type == 'item' %}
 
         {{ Twig.set("itemData", Twig.call("services.item.getVariation", [slideSettings.variationId])) }}
         {{ Twig.set("itemData", "itemData.documents[0].data") }}
@@ -48,7 +48,7 @@
 
     {% endif %}
 
-    {% if slideSettings.customImagePath | trim is not empty %}
+    {% if slideSettings.url.type == 'file' or slideSettings.url.type == 'external' %}
 
         {{ Twig.set("slide", "slide | merge({ imageUrl: #{ slideSettings.customImagePath | json_encode } })") }}
 
