--- a/resources/views/Widgets/MyAccount/OrderReturnHistoryWidget.twig
+++ b/resources/views/Widgets/MyAccount/OrderReturnHistoryWidget.twig
@@ -6,19 +6,27 @@
 {% set hintText     = widget.settings.hintText.mobile %}
 {% set itemsPerPage = widget.settings.itemsPerPage.mobile | default(5) %}
 
-<div class="widget widget-order-return-history widget-{{ appearance }}">
-    {% if hintText is not empty %}
-        <p>{{ hintText | raw }}</p>
-    {% endif %}
+{{ Twig.set("contactHasReturns", Twig.call("services.customer.hasReturns")) }}
 
-    <order-return-history :items-per-page="{{ itemsPerPage }}">
-        {% if isPreview %}
-            <div class="widget-placeholder">
-                <div>
-                    <p class="title">{{ Twig.trans("Ceres::Widget.orderReturnHistoryLabel") }}</p>
-                    <p class="description">{{ Twig.trans("Ceres::Widget.orderReturnHistoryPlaceholderDescription") }}</p>
-                </div>
-            </div>
+{{ Twig.if("contactHasReturns or #{ isPreview | json_encode }") }}
+
+    <div class="widget widget-order-return-history widget-{{ appearance }}">
+        <h3 class="mb-3">{{ Twig.trans("Ceres::Template.returnHistory") }}</h3>
+
+        {% if hintText is not empty %}
+            <p>{{ hintText | raw }}</p>
         {% endif %}
-    </order-return-history>
-</div>
+
+        <order-return-history :items-per-page="{{ itemsPerPage }}">
+            {% if isPreview %}
+                <div class="widget-placeholder">
+                    <div>
+                        <p class="title">{{ Twig.trans("Ceres::Widget.orderReturnHistoryLabel") }}</p>
+                        <p class="description">{{ Twig.trans("Ceres::Widget.orderReturnHistoryPlaceholderDescription") }}</p>
+                    </div>
+                </div>
+            {% endif %}
+        </order-return-history>
+    </div>
+
+{{ Twig.endif() }}
