--- a/resources/views/Widgets/WidgetComponents.twig
+++ b/resources/views/Widgets/WidgetComponents.twig
@@ -11,3 +11,5 @@
 {{ component("Ceres::Containers.Components.LastSeenItemList") }}
 {{ component("Ceres::LiveShopping.Components.LiveShoppingItem") }}
 {{ component("Ceres::Newsletter.Components.NewsletterInput") }}
+{{ component( "Ceres::MyAccount.Components.ChangePaymentMethod" ) }}
+{{ component( "Ceres::MyAccount.Components.OrderHistoryItem" ) }}
