--- a/resources/views/MyAccount/Components/AccountSettings.twig
+++ b/resources/views/MyAccount/Components/AccountSettings.twig
@@ -8,7 +8,7 @@
 
         <div class="add-item">
             <span class="item-edit">
-                <button v-tooltip data-toggle="tooltip" data-placement="top" title="{{ trans("Ceres::Template.myAccountChangeSettings") }}" class="btn btn-medium btn-only-icon-xs-down" :class="'btn-' + appearance" @click="showChangeAccountSettings"">
+                <button v-tooltip data-toggle="tooltip" data-placement="top" title="{{ trans("Ceres::Template.myAccountChangeSettings") }}" class="btn btn-medium btn-only-icon-xs-down" :class="'btn-' + appearance" @click="showChangeAccountSettings">
                     <span>{{ trans("Ceres::Template.myAccountChangeSettings") }}</span>
                     <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
                 </button>
