--- a/resources/views/Widgets/MyAccount/AccountSettingsWidget.twig
+++ b/resources/views/Widgets/MyAccount/AccountSettingsWidget.twig
@@ -6,14 +6,14 @@
 
 {{ Twig.set("userObject", Twig.call("services.customer.getContact")) }}
 {% set appearance = widget.settings.appearance.mobile %}
-{% set hinttext = widget.settings.text.mobile %}
+{% set hintText = widget.settings.text.mobile %}
 
 <div class="widget widget-account-settings">
     <h4>
         {{ Twig.trans("Ceres::Template.myAccountSettings") }}
     </h4>
-    {% if hinttext is not empty %}
-        {{ hinttext | raw }}
+    {% if hintText is not empty %}
+        {{ hintText | raw }}
     {% else %}
         <p class="text-muted small font-italic">{{ Twig.trans("Ceres::Template.myAccountChangeLoginData") }}</p>
     {% endif %}
