--- a/resources/views/Widgets/Common/ImageCarouselWidget.twig
+++ b/resources/views/Widgets/Common/ImageCarouselWidget.twig
@@ -67,8 +67,11 @@
     {% if slideSettings.url.value is not empty %}
         {{ TwigHelper.getUrl(slideSettings.url.value, slideSettings.url.type) }}
         {{ Twig.set("slide", "slide | merge({ url: url })") }}
-        {# {{ Twig.setEscaped("openInNewTab", slideSettings.url.openInNewTab)}}
-        {{ Twig.set("slide", "slide | merge({ openInNewTab: })") }} #}
+    {% endif %}
+
+    {% if slideSettings.url.openInNewTab is not empty %}
+        {{ Twig.setEscaped("openInNewTab", slideSettings.url.openInNewTab)}}
+        {{ Twig.set("slide", "slide | merge({ openInNewTab: openInNewTab})") }}
     {% endif %}
 
     {% if pushCurrentSlide %}
@@ -89,7 +92,8 @@
             {{ Twig.for("slide", "slides") }}
             
             <div class="carousel-item{{ Twig.if("loop.first") }} active{{ Twig.endif() }}">
-                <a {{ Twig.if("slide.url is not empty") }}href="{{ Twig.print("slide.url") }}"{{ Twig.endif() }}>
+                <a {{ Twig.if("slide.url is not empty") }}href="{{ Twig.print("slide.url") }}"{{ Twig.endif() }}
+                    {{ Twig.if("slide.openInNewTab is not empty") }} target="_blank" {{ Twig.endif() }}>
                     {{ Twig.if("slide.imageUrl is not empty") }}
                         <img src="{{ Twig.print("slide.imageUrl") }}" alt="{{ Twig.print("slide.name") }}" title="{{ Twig.print("slide.name") }}" class="img-cover">
                     {{ Twig.endif() }}
