--- a/resources/views/Widgets/MyAccount/GreetingWidget.twig
+++ b/resources/views/Widgets/MyAccount/GreetingWidget.twig
@@ -1,63 +1,52 @@
 {% import "Ceres::Widgets.Helper.TwigBuilder" as Twig %}
 
-{{ Twig.set("userObject", Twig.call("services.customer.getContact" )) }}
+{{ Twig.if("frontend.Account.getIsAccountLoggedIn or #{ isPreview | json_encode }") }}
 
-{% set style = widget.settings.salutation.mobile %}
+    {{ Twig.set("userObject", Twig.call("services.customer.getContact" )) }}
 
-<div class="widget widget-greeting">
+    {{ Twig.set( "previewText", {
+        firstname_surname: trans('Ceres::Widget.greetingWidgetForenameSurname'),
+        firstname: trans('Ceres::Widget.greetingWidgetForename'),
+        title_surname: trans('Ceres::Widget.greetingWidgetTitleSurname'),
+        email: trans('Ceres::Widget.greetingWidgetEmail')
+    } | json_encode ) }}
 
-    <span>{{ style }}</span>
-    
-    {# {{ Twig.if("(userObject.gender == 'female') | json_encode")  }}
-        <p>Dieses1</p>
-    {{ Twig.else() }}
-        <p>Jenes1</p>
-    {{ Twig.endif() }}
-    {{ Twig.if("userObject.gender == 'female'")  }}
-        <p>Dieses2</p>
-    {{ Twig.else() }}
-        <p>Jenes2</p>
-    {{ Twig.endif() }}
-    {{ Twig.if("userObject.gender == 'female' | json_encode")  }}
-        <p>Dieses3</p>
-    {{ Twig.else() }}
-        <p>Jenes3</p>
-    {{ Twig.endif() }} #}
+    {% set setting = widget.settings.salutation.mobile %}
+    {{ Twig.set( "pattern" , setting | json_encode ) }}
 
-    {% if style == "fs" %}
-        {{ Twig.if ("userObject.firstName | length > 0 and userObject.lastName | length > 0") }}
-            {{ Twig.set("name", "userObject.firstName ~ ' ' ~ userObject.lastName" ) }}
-        {{ Twig.endif() }}
-    {% elseif style == "f" %}
-        {{ Twig.if ("userObject.firstName | length > 0") }}
-            {{ Twig.set("name", "userObject.firstName" ) }}
-        {{ Twig.endif() }}
-    {% elseif style == "sf" %}
-        {{ Twig.if ("userObject.firstName | length > 0 and userObject.lastName | length > 0") }}
-            {{ Twig.set("name", "userObject.lastName ~ ', ' ~ userObject.firstName" ) }}
-        {{ Twig.endif() }}
-    {% elseif style == "ts" %}
-        {{ Twig.if ("userObject.gender | length > 0 and userObject.lastName | length > 0") }}
-            {{ Twig.if("userObject.gender == 'male'")  }}
-                {# {{ Twig.set("name", "Twig.trans('Ceres::Widget.greetingWidgetMale') ~ ' ' ~ userObject.lastName" ) }} #}
-                {# {{ Twig.set("name", Twig.trans('Ceres::Widget.greetingWidgetMale') ~ ' ' ~ userObject.lastName ) }} #}
-                {{ Twig.set("name", "trans('Ceres::Widget.greetingWidgetMale') ~ ' ' ~ userObject.lastName" ) }}
+    <div class="widget widget-greeting">
+        {% if setting == "firstname_surname" %}
+            {{ Twig.if ("userObject.firstName | length > 0 and userObject.lastName | length > 0") }}
+                {{ Twig.set("name", "userObject.firstName ~ ' ' ~ userObject.lastName" ) }}
+            {{ Twig.endif() }}
+            
+        {% elseif setting == "firstname" %}
+            {{ Twig.if ("userObject.firstName | length > 0") }}
+                {{ Twig.set("name", "userObject.firstName" ) }}
             {{ Twig.endif() }}
 
-            {{ Twig.if("userObject.gender == 'female'")  }}
-                {# {{ Twig.set("name", "Twig.trans('Ceres::Widget.greetingWidgetFemale') ~ ' ' ~ userObject.lastName" ) }} #}
-                {# {{ Twig.set("name", Twig.trans('Ceres::Widget.greetingWidgetFemale') ~ ' ' ~ userObject.lastName ) }}  #}
-                {{ Twig.set("name", "trans('Ceres::Widget.greetingWidgetFemale') ~ ' ' ~ userObject.lastName" ) }}
+        {% elseif setting == "title_surname" %}
+            {{ Twig.if ("userObject.gender | length > 0 and userObject.lastName | length > 0") }}
+                {{ Twig.if("userObject.gender == 'male'")  }}
+                    {{ Twig.set("name", "trans('Ceres::Widget.greetingWidgetMale') ~ ' ' ~ userObject.lastName" ) }}
+                {{ Twig.endif() }}
+                {{ Twig.if("userObject.gender == 'female'")  }}
+                    {{ Twig.set("name", "trans('Ceres::Widget.greetingWidgetFemale') ~ ' ' ~ userObject.lastName" ) }}
+                {{ Twig.endif() }}
             {{ Twig.endif() }}
-        {{ Twig.endif() }}
-    {% elseif style == "e" %}
-        {{ Twig.if ("userObject.email | length > 0") }}
-            {{ Twig.set("name", "userObject.email" ) }}
-        {{ Twig.endif() }}
-    {% endif %}
 
-    {{ Twig.if("frontend.Account.getIsAccountLoggedIn") }}
+        {% elseif setting == "email" %}
+            {{ Twig.if ("userObject.email | length > 0") }}
+                {{ Twig.set("name", "userObject.email" ) }}
+            {{ Twig.endif() }}
+            
+        {% endif %}
+
+        {% if isPreview %}
+            <div>{{ Twig.set( "name", "previewText[pattern]" ) }}</div>
+        {% endif %}
+
         <span class="text-muted">{{ Twig.trans("Ceres::Template.myAccountHello", {"username": Twig.var("name")}) }}</span>
-    {{ Twig.endif() }}
 
-</div>
+    </div>
+{{ Twig.endif() }}
