--- a/resources/css/ceres-legacy.scss
+++ b/resources/css/ceres-legacy.scss
@@ -11048,10 +11048,6 @@ button:focus {
 
 	outline: 0 !important;
 
-	&.btn-right {
-		float: right;
-	}
-
 	& .btn-label {
 		&.btn-trans {
 			background: transparent;
@@ -11071,14 +11067,8 @@ button:focus {
 		margin-top: 1px;
 	}
 
-	&.btn-remove-address {
-		background-color: $danger;
-		margin-right: -5px;
-		color: #fff;
-
-		&:hover{
-			background-color: #c9302c;
-		}
+	&.btn-danger:hover {
+		background-color: #c9302c;
 	}
 
 	&.btn-medium {
@@ -11100,6 +11090,7 @@ button:focus {
 	&.btn-block {
 		> .fa {
 			line-height: inherit;
+			margin-top: 0;
 		}
 	}
 
@@ -11201,29 +11192,6 @@ button:focus {
 	  }
 	}
   }
-.card{
-	
-	.item-edit{
-		position: absolute;
-		top: 1rem;
-		right: 1rem;
-		font-size: 1.5rem;
-		line-height: 1.5rem;
-		
-		.fa{
-    		width: 1em;
-		    height: 1em;
-		    color: $gray-light;
-		    -webkit-transition: all .2s ease-in-out;
-		    transition: all .2s ease-in-out;
-
-		    &:hover{
-				color: $primary;
-				border-color: $primary;
-	    	}
-    	}
-	}
-}
 
 // External plugins overrides
 .bs4-progress
@@ -14937,18 +14905,27 @@ body.menu-is-visible {
 	.items{
 		position: relative;
 
+		@include media-breakpoint-up(md) {
+			display: inline-block;
+			vertical-align: middle;
+			width: 100%;
+		}
+
 		//TODO add class to this div and set this rule by the class
 		&>div:first-child{
 			@extend .card;
 			margin-bottom: 0;
+
+			@include media-breakpoint-down(xs) {
+				min-height: 115px;
+			}
 		}
 	}
 
 	.dropdown-toggle{
-
 		&:after{
 		    position: absolute;
-				top: 80%;
+			top: 80%;
     		right: 1.5rem;
 		    -webkit-transform: translateY(-50%);
 		            transform: translateY(-50%);
@@ -14985,32 +14962,11 @@ body.menu-is-visible {
 		overflow-y: auto;
 	}
 
-	.add-item{
-		position: absolute;
-		
-		@include media-breakpoint-down(xs)
-		{
-			top: 0;
-			right: 0;
-
-			& button {
-				min-width: auto !important;
-				width: 50px;
-				height: 74px;
-			}
-		}
-
-		@include media-breakpoint-up(sm)
-		{
-			top: 1em;
-			right: 1em;
-		}
-	}
-
 	.item{
 		padding: 0;
 		border-bottom: 1px solid $gray-lighter;
 		position:relative;
+
 		input{ display: none; }
 
 		input:checked{
@@ -15020,14 +14976,6 @@ body.menu-is-visible {
 				        box-shadow: inset 0 0 0 0.1rem $primary;
 				color: $black;
 				background-color: #d9edf7;
-			}
-
-			& + .item-inner .item-edit .fa:hover{
-				color: white;
-			}
-			& + .item-controls .fa:hover{
-				color: white;
-				cursor: pointer;
 			}
 		}
 
@@ -15049,48 +14997,35 @@ body.menu-is-visible {
 		padding: 1em;
 		margin-bottom: 0;
 
-		& .item-controls {
-			@include media-breakpoint-down(md) {
-				width: 83px;
-			}
+		.item-controls {
+			display: -webkit-box;
+			display: -ms-flexbox;
+			display: flex;
 
-			@include media-breakpoint-up(md) {
-				width: 75px;
+			.item-edit .fa {
+				padding-left: 0.1rem;
+				padding-top: 0.3rem;
+			}
+			.item-remove .fa {
+				padding-top: 0.1rem;
+			}
+			.fa {
+				-webkit-transition: all .2s ease-in-out;
+				transition: all .2s ease-in-out;
+				float: none;
+			}
+			.btn {
+				width: 2.2rem;
+				height: 2.2rem;
+				margin-left: 5px;
+				padding: 0;
 			}
 		}
 	}
 
-	.item-edit{
-		& .btn {
-			width: 2.2rem;
-			padding-right: 6px;
-			height: 2.2rem;
-		}
-		.fa{
-			color: #fff;
-			margin-top: 1px;
-			-webkit-transition: all .2s ease-in-out;
-			transition: all .2s ease-in-out;
-			
-    	}
-	}
-	.item-remove {
-		& .btn {
-			width: 2.2rem;
-			padding-right: 9px;
-			height: 2.2rem;
-		}
-	    .fa {
-	    	color: #fff;
-			-webkit-transition: all .2s ease-in-out;
-			transition: all .2s ease-in-out;
-			margin-top: -1px;
-	    }
-	}
 
 	.item-content{
 		display: inline-block;
-	    // width: calc( 100% - 4em );
 	    width: 100%;
 	    -webkit-box-flex: 1;
 	        -ms-flex: 1 1 auto;
@@ -15100,30 +15035,36 @@ body.menu-is-visible {
 			display: block;
 		}
 	}
-
-	@include media-breakpoint-up(sm){
-
-	}
-
-	@include media-breakpoint-up(md){
-		.items{
-			display: inline-block;
-			vertical-align: middle;
-			// width: calc( 100% - 5em );
-			width:100%;
-		}
-
-	}
-
-	@include media-breakpoint-up(lg){
-
-	}
 }
+
 .checkout {
-	header{
-		h4 {
-    	line-height: 2.5rem;
+    header {
+        h4 {
+            line-height: 2.5rem;
+        }
+    }
+}
+
+.add-item {
+	position: absolute;
+	cursor: pointer;
+	
+	@include media-breakpoint-down(xs)
+	{
+		top: 0;
+		right: 0;
+
+		& button {
+			min-width: auto !important;
+			width: 50px;
+			height: 74px;
 		}
+	}
+
+	@include media-breakpoint-up(sm)
+	{
+		top: 1em;
+		right: 1em;
 	}
 }
 
@@ -19218,6 +19159,20 @@ html.ios {
 .current-payment-width
 {
     width: 100%!important;
+}
+
+.card-body {
+    padding: 1rem;
+
+    .add-item {
+        bottom: 0;
+
+        @include media-breakpoint-down(xs) {
+            button {
+                height: 100%;
+            }
+        }
+    }
 }
 
 // Widgets
