--- a/resources/views/Checkout/CheckoutView.twig
+++ b/resources/views/Checkout/CheckoutView.twig
@@ -75,7 +75,7 @@
                                         {{ LayoutContainer.show("Ceres::Checkout.BeforeBillingAddress") }}
                                         <div class="invoice-addresses-select">
                                             <invoice-address-select
-                                                has-to-validate="true"
+                                                :has-to-validate="true"
                                                 :optional-address-fields="{{ optionalInvoiceAddressFields | json_encode }}"
                                                 :required-address-fields="{{ requiredInvoiceAddressFields | json_encode }}">
                                             </invoice-address-select>
