--- a/resources/views/Customer/Components/AddressInputGroup/Locale/BillingAddressInputGroupGB.twig
+++ b/resources/views/Customer/Components/AddressInputGroup/Locale/BillingAddressInputGroupGB.twig
@@ -7,7 +7,9 @@
                 class="input-unit"
                 v-validate="isInRequiredFields('gb', 'billing_address.salutation')">
                 <salutation-select :address-type="addressType" :address-data="value" :enabled-address-fields="optionalAddressFields" @input="emitInputEvent($event.field, $event.value)"></salutation-select>
-                <label :for="'txtSalutation' + _uid">{{ trans("Ceres::Template.addressSalutation") }}{% if "billing_address.salutation" in addressFieldsRequired %}*{% endif %}</label>
+                <label :for="'txtSalutation' + _uid">
+                    ${ '{{ trans("Ceres::Template.addressSalutation") }}' | transformRequiredLabel(isInRequiredFields('gb', 'billing_address.salutation')) }
+                </label>
             </div>
         </div>
     </div>
@@ -32,7 +34,9 @@
                 data-model="vatNumber"
                 v-validate:text="isInRequiredFields('gb', 'billing_address.vatNumber')">
                 <input type="text" name="vatNumber" :id="'txtVatNumber' + _uid" :value="value.vatNumber" @input="emitInputEvent('vatNumber', $event.target.value)" data-autofocus>
-                <label :for="'txtVatNumber' + _uid">{{ trans("Ceres::Template.addressVatNumber") }}{% if "billing_address.vatNumber" in addressFieldsRequired %}*{% endif %}</label>
+                <label :for="'txtVatNumber' + _uid">
+                    ${ '{{ trans("Ceres::Template.addressVatNumber") }}' | transformRequiredLabel(isInRequiredFields('gb', 'billing_address.vatNumber')) }
+                </label>
             </div>
         </div>
     </div>
@@ -47,7 +51,9 @@
                 data-model="title"
                 v-validate:text="isInRequiredFields('gb', 'billing_address.title')">
                 <input type="text" name="title" :id="'txtTitle' + _uid" :value="value.title" @input="emitInputEvent('title', $event.target.value)" data-autofocus>
-                <label :for="'txtTitle' + _uid">{{ trans("Ceres::Template.addressTitle") }}{% if "billing_address.title" in addressFieldsRequired %}*{% endif %}</label>
+                <label :for="'txtTitle' + _uid">
+                    ${ '{{ trans("Ceres::Template.addressTitle") }}' | transformRequiredLabel(isInRequiredFields('gb', 'billing_address.title')) }
+                </label>
             </div>
         </div>
 
@@ -94,7 +100,9 @@
                 data-model="birthday"
                 v-validate:date="isInRequiredFields('gb', 'billing_address.birthday')">
                 <input type="date" min="1901-12-14" :max="new Date().toISOString().split('T')[0]" name="birthday" placeholder="{{ trans("Ceres::Template.addressBirthdatePlaceholder") }}" :id="'txtBirthdate' + _uid" :value="value.birthday" @input="emitInputEvent('birthday', $event.target.value)">
-                <label :for="'txtBirthdate' + _uid">{{ trans("Ceres::Template.addressBirthdate") }}{% if "billing_address.birthday" in addressFieldsRequired %}*{% endif %}</label>
+                <label :for="'txtBirthdate' + _uid">
+                    ${ '{{ trans("Ceres::Template.addressBirthdate") }}' | transformRequiredLabel(isInRequiredFields('gb', 'billing_address.birthday')) }
+                </label>
             </div>
         </div>
 
@@ -121,14 +129,17 @@
             </div>
         </div>
 
-        {% if "billing_address.address2" in addressFields %}
-        <div class="col-12 col-sm-12">
-            <div class="input-unit" {% if "billing_address.address2" in addressFieldsRequired %}data-validate="text" {% endif %}data-model="address2">
+        <div v-if="isInOptionalFields('gb', 'billing_address.address2')" class="col-12 col-sm-12">
+            <div 
+                class="input-unit"
+                data-model="address2"
+                v-validate:text="isInRequiredFields('gb', 'billing_address.address2')">
                 <input type="text" name="housenumber" autocomplete="address-line2" :id="'txtNumber' + _uid" :value="value.address2" @input="emitInputEvent('address2', $event.target.value)">
-                <label :for="'txtNumber' + _uid">{{ trans("Ceres::Template.addressENAddressLine2") }}{% if "billing_address.address2" in addressFieldsRequired %}*{% endif %}</label>
+                <label :for="'txtNumber' + _uid">
+                    ${ '{{ trans("Ceres::Template.addressENAddressLine2") }}' | transformRequiredLabel(isInRequiredFields('gb', 'billing_address.address2')) }
+                </label>
             </div>
         </div>
-        {% endif %}
     </div>
 </div>
 
